--- a/index.html
+++ b/index.html
@@ -550,17 +550,17 @@
           </div>
           <form action="" class="form trade__form">
             <div class="trade__form-flex">
-              <div class="trade__form-select">
+              <div class="trade__form-select desk_basis_50">
                 <select name="tradeincarbrand" id="">
                   <option value="" selected>Марка</option>
                 </select>
               </div>
-              <div class="trade__form-select">
+              <div class="trade__form-select desk_basis_50">
                 <select name="tradeincarmodel" id="" disabled>
                   <option value="" selected>Модель</option>
                 </select>
               </div>
-              <div class="trade__form-select">
+              <div class="trade__form-select desk_basis_100">
                 <select name="tradeincaryear" id="">
                   <option value="" selected>Год</option>
                   <option value="1990">1990</option>
@@ -602,7 +602,7 @@
             <div class="trade__form-inputs">
               <input type="text"
               placeholder="Имя"
-              required name="name"
+              name="name"
               class="trade__form-input">
               <input type="tel"
                 placeholder="+7 (___) ___-__-__"
