--- a/index.html
+++ b/index.html
@@ -19,9 +19,153 @@
       href="./css/desk-style.css"
       media="(min-width: 1025px)"
     />
-    <title>Landing page</title>
+    <title>CHERY TIGGO 7 PRO</title>
 </head>
 <body>
+  <header class="header">
+    <div class="container">
+      <div class="header__container">
+        <div class="header__logo">
+          <img src="./img/logo.svg" alt="" class="header__logo-img">
+        </div>
+        <a href="tel:+7 (495) 154-83-30" class="header__phone-mob">+7 (495) 154-83-30</a>
+        <div class="header__ball">
+          <div class="burger">
+            <span class="burger__line line_1"></span>
+            <span class="burger__line line_2"></span>
+            <span class="burger__line line_3"></span>
+            <span class="burger__line line_4"></span>
+          </div>
+        </div>
+        <div class="header__menu">
+          <div class="header__menu-info">
+            <span class="header__model-name">Chery Tiggo 7 Pro</span>
+            <span class="header__local">
+              <img src="./img/header_local.svg" alt="icon">
+              Россия, г. Москва, 33км МКАД, 6с6
+            </span>
+            <a href="tel:+7 (495) 154-83-30" class="header__menu-phone">+7 (495) 154-83-30</a>
+            <button class="btn header__button bg_red">
+              <img src="./img/header_phone.svg" alt="icon" class="header__button-img">
+              <span>Обратный звонок</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+  <section class="main-banner">
+    <div class="main-banner__container">
+      <div class="main-banner__info">
+        <div class="container">
+          <div class="main-banner__info-cont">
+            <div class="main-banner__info-top">
+              <h1 class="main-banner__title">
+                Приобретайте<br>
+                <b>Chery Tiggo 7 Pro</b><br>
+                с выгодой <span class="text_color">до 40%</span>
+              </h1>
+              <div class="main-banner__timer">
+                <span class="main-banner__timer-head">До повышения цены осталось:</span>
+                <div class="timer">
+                  <div class="time-count__item time-count__days">
+                      <div class="time-count__val">00</div>
+                      <span class="time-count__text">дней</span>
+                      <div class="count-line progress-days"></div>
+                      <div class="count-round">
+                          <svg viewBox="0 0 64 64" class="pie">
+                              <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                              <circle class="chart chart-days" r="50%" cx="50%" cy="50%" stroke-dasharray="200 200"></circle>
+                          </svg>
+                      </div>
+                  </div>
+                  <div class="time-count__item time-count__hours">
+                      <div class="time-count__val">00</div>
+                      <span class="time-count__text">часов</span>
+                      <div class="count-round">
+                          <svg viewBox="0 0 64 64" class="pie">
+                              <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                              <circle class="chart chart-hours" r="50%" cx="50%" cy="50%" stroke-dasharray="200 200"></circle>
+                          </svg>
+                      </div>
+                  </div>
+                  <div class="time-count__item time-count__minutes">
+                      <div class="time-count__val">00</div>
+                      <span class="time-count__text">минут</span>
+                      <div class="count-round">
+                          <svg viewBox="0 0 64 64" class="pie">
+                              <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                              <circle class="chart chart-minutes" r="50%" cx="50%" cy="50%" stroke-dasharray="200 200"></circle>
+                          </svg>
+                      </div>
+                  </div>
+                  <div class="time-count__item time-count__seconds">
+                      <div class="time-count__val">00</div>
+                      <span class="time-count__text">секунд</span>
+                      <div class="count-line progress-seconds"></div>
+                      <div class="count-round">
+                          <svg viewBox="0 0 64 64" class="pie">
+                              <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                              <circle class="chart chart-seconds" r="50%" cx="50%" cy="50%" stroke-dasharray="200 200"></circle>
+                          </svg>
+                      </div>
+                  </div>
+                  </div>
+              </div>
+            </div>
+            <div class="main-banner__prices-btn">
+              <div class="main-banner__prices">
+                <span class="main-banner__price-old">1 989 900₽</span>
+                <div class="main-banner__flex">
+                  <span class="main-banner__price-text _price">Цена от</span>
+                  <span class="main-banner__price">1 280 100₽</span>
+                </div>
+                <div class="main-banner__flex margin_top">
+                  <span class="main-banner__price-text _price-month">Платеж от</span>
+                  <span class="main-banner__price-month">17 000₽/мес.</span>
+                </div>
+              </div>
+              <div class="main-banner__btns">
+                <button class="btn main-banner__button _border">Рассчитать кредит</button>
+                <button class="btn main-banner__button _gradient">Получить скидку 350 000₽</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="main-banner__bottom">
+        <div class="container">
+          <ul class="main-banner__List">
+            <li class="main-banner__list-item">
+              <img src="./img/ok.svg" alt="icon">
+              <span>кредит <b>4,9%</b></span>
+            </li>
+            <li class="main-banner__list-item">
+              <img src="./img/ok.svg" alt="icon">
+              <span>Рассрочка <b>0%</b></span>
+            </li>
+            <li class="main-banner__list-item">
+              <img src="./img/ok.svg" alt="icon">
+              <span>скидка<br> <b>до 350 000₽</b></span>
+            </li>
+            <li class="main-banner__list-item">
+              <img src="./img/ok.svg" alt="icon">
+              <span>гарантия<br> <b>5 лет</b></span>
+            </li>
+            <li class="main-banner__list-item">
+              <img src="./img/ok.svg" alt="icon">
+              <span><b>без</b> первого 
+                взноса</span>
+            </li>
+            <li class="main-banner__list-item">
+              <img src="./img/ok.svg" alt="icon">
+              <span>Trade-in<br> <b>-300 000₽</b></span>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
     <script src="./libs/jquery.min.js"></script>
     <script src="./libs/masked-input.min.js"></script>
     <script src="./libs/fancybox.min.js"></script>
