--- a/index.html
+++ b/index.html
@@ -19,9 +19,41 @@
       href="./css/desk-style.css"
       media="(min-width: 1025px)"
     />
-    <title>Landing page</title>
+    <title>GEELY COOLRAY</title>
 </head>
 <body>
+  <header class="header">
+    <div class="container">
+      <div class="header__container">
+        <div class="header__logo">
+          <img src="./img/logo.svg" alt="" class="header__logo-img">
+        </div>
+        <a href="tel:+7 (495) 154-83-30" class="header__phone-mob">+7 (495) 154-83-30</a>
+        <div class="header__ball">
+          <div class="burger">
+            <span class="burger__line line_1"></span>
+            <span class="burger__line line_2"></span>
+            <span class="burger__line line_3"></span>
+            <span class="burger__line line_4"></span>
+          </div>
+        </div>
+        <div class="header__menu">
+          <div class="header__menu-info">
+            <span class="header__model-name">Geely Coolray</span>
+            <span class="header__local">
+              <img src="./img/header_local.svg" alt="icon">
+              Россия, г. Москва, 33км МКАД, 6с6
+            </span>
+            <a href="tel:+7 (495) 154-83-30" class="header__menu-phone">+7 (495) 154-83-30</a>
+            <button class="btn header__button bg_blue">
+              <img src="./img/header_phone.svg" alt="icon" class="header__button-img">
+              <span>Обратный звонок</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
     <script src="./libs/jquery.min.js"></script>
     <script src="./libs/masked-input.min.js"></script>
     <script src="./libs/fancybox.min.js"></script>
