--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
     <link rel="stylesheet" href="./css/reset-style.css" />
     <link rel="stylesheet" href="./css/swiper.min.css" />
     <link rel="stylesheet" href="./css/fancybox.min.css" />
@@ -45,11 +46,11 @@
               Россия, г. Москва, 33км МКАД, 6с6
             </span>
             <a href="tel:+7 (495) 154-83-30" class="header__menu-phone">+7 (495) 154-83-30</a>
-            <button class="btn header__button bg_red">
-              <img src="./img/header_phone.svg" alt="icon" class="header__button-img">
-              <span>Обратный звонок</span>
-            </button>
           </div>
+          <button class="btn header__button bg_red" data-fancybox data-src="#modalCall">
+            <img src="./img/header_phone.svg" alt="icon" class="header__button-img">
+            <span>Обратный звонок</span>
+          </button>
         </div>
       </div>
     </div>
@@ -126,8 +127,8 @@
                 </div>
               </div>
               <div class="main-banner__btns">
-                <button class="btn main-banner__button _border">Рассчитать кредит</button>
-                <button class="btn main-banner__button _gradient">Получить скидку 350 000₽</button>
+                <button class="btn main-banner__button _border" data-fancybox data-src="#modalCredit">Рассчитать кредит</button>
+                <button class="btn main-banner__button _gradient" data-fancybox data-src="#modalRequest">Получить скидку 350 000₽</button>
               </div>
             </div>
           </div>
@@ -166,6 +167,177 @@
       </div>
     </div>
   </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__container">
+        <p class="footer__text-bold">
+          ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "ЮНИОН КАРС"
+ИНН 9728009661, ОГРН 1207700280732, КПП 772501001 от 10 августа 2020 г.
+Юридический адрес: 115191, город Москва, Малая Тульская ул, д. 16, помещ. 4/1п
+        </p>
+        <p class="footer__text text_margin">
+          Обращаем ваше внимание на то, что данный интернет-сайт носит исключительно информационный характер и ни при каких условиях не является публичной офертой, определяемой положением ч. 2 ст. 437 Гражданского кодекса Российской Федерации.
+        </p>
+        <button class="btn footer__button  js_btn_footer_toggle_text">Подробнее</button>
+        <p class="footer__text text_toggle js_text_footer_toggle">
+          Обращаем ваше внимание на то, что данный Интернет-сайт носит исключительно информационный характер и ни при каких условиях не является публичной офертой, определяемой положениями Статьи 437 Гражданского кодекса Российской Федерации. Для получения подробной информации о стоимости автомобилей обращайтесь к менеджерам по продажам. Любая информация, содержащаяся на настоящем сайте, носит исключительно справочный характер и ни при каких обстоятельствах не может быть расценена как предложение заключить договор (публичная оферта). Дилер не дает гарантий по поводу своевременности, точности и полноты информации на веб-сайте, а также по поводу беспрепятственного доступа к нему в любое время. Технические характеристики и оборудование автомобилей, условия приобретения автомобилей, цены, спецпредложения и комплектации автомобилей, указанные на сайте, приведены для примера и могут быть изменены в любое время без предварительного уведомления. Для получения подробной информации об актуальных ценах на продукцию и наличии автомобилей обращайтесь в дилерский центр. Приобретение любой продукции бренда осуществляется в соответствии с условиями индивидуального договора купли-продажи. Представленное изображение автомобиля может отличаться от реализуемого. Не является публичной офертой. ПТС - Паспорт транспортного средства. На данном сайте используются зарегистрированные товарные знаки, перечисленные в разделе Правовая информация. Указана цена на автомобиль в начальной комплектации на автомобили 2022 модельного года. Для заказов с подтвержденной производственной к.н. 50/2021. Количество автомобилей ограничено. Размер платежа в день означает величину затрат заемщика, эквивалентную ежемесячному платежу при условии 30 (тридцати) календарных дней в месяце, взявшего кредит по программе кредитования ВТБ, Сетелем, Русфинанс Банк, Банк Союз, Экспобанк, Совкомбанк, Альфа Банк, Тинькофф, Плюсбанк, Банк Оранжевый, Росбанк, Ситибанк, (далее – «Банк») на покупку нового автомобиля с расчетной розничной ценой в начально комплектации, на срок 60 мес., с первоначальным взносом 57,92% от стоимости автомобиля, остаточным платежом (далее ОП) 20% от стоимости автомобиля и процентной ставкой 14,5%. Данная информация не является офертой Банка, расчет является приблизительным. Полная стоимость кредита и конкретные параметры кредита будут рассчитаны на основании Анкеты клиента, направляемой в Банк для одобрения кредитной заявки. Основные условия кредитования ВТБ, Сетелем, Русфинанс Банк, Банк Союз, Экспобанк, Совкомбанк, Альфа Банк, Тинькофф, Плюсбанк, Банк Оранжевый, Росбанк, Ситибанк, (далее Банк) на покупку нового автомобиля по продукту «Кредит с остаточным платежом на приобретение нового автомобиля» валюта кредита – рубли РФ; сумма кредита от 120 тыс. до 5.8 млн. ₽ Процентная ставка (в % годовых) при сроке от 12 до 60 мес. – 14,5% при первоначальном взносе (далее ПВ) от 15% (включительно). 
+При ПВ менее 20% необходимо предоставление полного пакета документов. Минимальный размер остаточного платежа (далее ОП) в % от стоимости автомобиля – 20%; максимальный размер ОП при сроке при сроке кредита 12 мес. – 60%, при сроках от 13 до 24 мес. – 50%, при сроках от 25 до 36 мес. – 45%, при сроках от 37 до 48 мес. – 30%, при сроках от 49 до 60 мес. – 20%. Обеспечение по кредиту – залог приобретаемого автомобиля. Условия кредита действительны до 01.06.2022 и могут быть изменены Банком. Лицензия ЦБ РФ № 3500, г. Москва.
+        </p>
+        <div class="footer__links">
+          <a href="" class="footer__text-bold">Условия кредитования</a>
+          <a href="" class="footer__text-bold">Пользовательское соглашение</a>
+          <a href="" class="footer__text-bold">Политика конфиденциальности</a>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <div class="popup" id="modalCall">
+    <div class="popup__container">
+      <div class="popup__texts">
+        <span class="popup__head">Обратный звонок</span>
+        <span class="popup__text">
+          Заполните ваши данные<br>
+          <span class="text_color">и мы Вам перезвоним</span>
+        </span>
+      </div>
+      <form action="" class="popup__form">
+        <div class="popup__inputs">
+          <input type="text" name="name" placeholder="Имя" class="popup__input">
+          <input type="tel" name="phone" placeholder="+ 7 (495)___-__-__" class="popup__input" required>
+        </div>
+        <button class="btn bg_red popup__button">Получить предложение</button>
+        <div class="form-checkbox">
+          <label for="check-modal-credit">
+            <span class="checkbox">
+              <input class="form__input-check" type="checkbox" id="check-modal-credit" checked="">
+              <span class="custom-checkbox"></span>
+            </span>
+            <span class="checkbox-text">
+              Нажимая кнопку “Получить предложение” Вы даете согласие на обработку своих <a href="/policy" class="checkbox-link">персональных данных</a>
+            </span>
+          </label>
+        </div>
+      </form>
+    </div>
+  </div>
+  <div class="popup" id="modalTrade">
+    <div class="popup__container">
+      <div class="popup__texts">
+        <span class="popup__head">
+          Обменяйте ваш старый<br> 
+          автомобиль на новую<br>
+          <b>Chery Tiggo 7 Pro</b> 
+        </span>
+        <span class="popup__text">
+          И получите скидку
+          <b class="text_color">до 300 000₽</b>
+        </span>
+      </div>
+      <form action="" class="popup__form">
+        <div class="popup__inputs">
+          <input type="text" name="name" placeholder="Имя" class="popup__input">
+          <input type="tel" name="phone" placeholder="+ 7 (495)___-__-__" class="popup__input" required>
+        </div>
+        <button class="btn bg_red popup__button">Отправить</button>
+        <div class="form-checkbox">
+          <label for="check-modal-credit">
+            <span class="checkbox">
+              <input class="form__input-check" type="checkbox" id="check-modal-credit" checked="">
+              <span class="custom-checkbox"></span>
+            </span>
+            <span class="checkbox-text">
+              Нажимая кнопку “Отправить” Вы даете согласие на обработку своих <a href="/policy" class="checkbox-link">персональных данных</a>
+            </span>
+          </label>
+        </div>
+      </form>
+    </div>
+  </div>
+  <div class="popup" id="modalRequest">
+    <div class="popup__container">
+      <div class="popup__texts">
+        <span class="popup__head">
+          Заполните заявку
+        </span>
+        <span class="popup__text">
+          на персональное предложение
+        </span>
+      </div>
+      <form action="" class="popup__form">
+        <div class="popup__inputs">
+          <input type="text" name="name" placeholder="Имя" class="popup__input">
+          <input type="tel" name="phone" placeholder="+ 7 (495)___-__-__" class="popup__input" required>
+        </div>
+        <button class="btn bg_red popup__button">Отправить</button>
+        <div class="form-checkbox">
+          <label for="check-modal-credit">
+            <span class="checkbox">
+              <input class="form__input-check" type="checkbox" id="check-modal-credit" checked="">
+              <span class="custom-checkbox"></span>
+            </span>
+            <span class="checkbox-text">
+              Нажимая кнопку “Отправить” Вы даете согласие на обработку своих <a href="/policy" class="checkbox-link">персональных данных</a>
+            </span>
+          </label>
+        </div>
+      </form>
+    </div>
+  </div>
+  <div class="popup" id="modalCredit">
+    <div class="popup__container">
+      <div class="popup__texts">
+        <span class="popup__head">
+          Выгодный<br> 
+          автокредит
+          <b> от 4,9%</b> 
+        </span>
+        <ul class="popup__list">
+          <li class="popup__list-item">скидка <b> до 70 000₽</b></li>
+          <li class="popup__list-item">одобрение <b>97%</b></li>
+          <li class="popup__list-item">оформление по <b>2-м документам</b></li>
+        </ul>
+      </div>
+      <form action="" class="popup__form">
+        <div class="popup__inputs">
+          <input type="text" name="name" placeholder="Имя" class="popup__input">
+          <input type="tel" name="phone" placeholder="+ 7 (495)___-__-__" class="popup__input" required>
+        </div>
+        <button class="btn bg_red popup__button">Отправить</button>
+        <div class="form-checkbox">
+          <label for="check-modal-credit">
+            <span class="checkbox">
+              <input class="form__input-check" type="checkbox" id="check-modal-credit" checked="">
+              <span class="custom-checkbox"></span>
+            </span>
+            <span class="checkbox-text">
+              Нажимая кнопку “Отправить” Вы даете согласие на обработку своих <a href="/policy" class="checkbox-link">персональных данных</a>
+            </span>
+          </label>
+        </div>
+      </form>
+    </div>
+  </div>
+  <div class="popup" id="modalSus">
+    <div class="popup__container">
+      <div class="popup__texts">
+        <span class="popup__head">Спасибо за заявку!</span>
+        <span class="popup__sun-head">Наш менеджер свяжется с Вами
+          через 2-3 минуты!</span>
+      </div>
+    </div>
+  </div>
+  <div class="popup" id="modalSus2">
+    <div class="popup__container">
+      <div class="popup__texts">
+        <span class="popup__head">Вы уже 
+          оставляли заявку!</span>
+        <span class="popup__sun-head">
+          Наш менеджер свяжется с Вами
+          через 2-3 минуты!
+        </span>
+      </div>
+    </div>
+  </div>
     <script src="./libs/jquery.min.js"></script>
     <script src="./libs/masked-input.min.js"></script>
     <script src="./libs/fancybox.min.js"></script>
