--- a/index.html
+++ b/index.html
@@ -1,31 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/reset-style.css" />
-    <link rel="stylesheet" href="./css/swiper.min.css" />
-    <link rel="stylesheet" href="./css/fancybox.min.css" />
-    <link rel="stylesheet" href="./css/sumoselect2.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link
-      rel="stylesheet"
-      href="./css/tablet-style.css"
-      media="(min-width: 768px)"
-    />
-    <link
-      rel="stylesheet"
-      href="./css/desk-style.css"
-      media="(min-width: 1025px)"
-    />
-    <title>Landing page</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/reset-style.css" />
+  <link rel="stylesheet" href="./css/swiper.min.css" />
+  <link rel="stylesheet" href="./css/fancybox.min.css" />
+  <link rel="stylesheet" href="./css/sumoselect2.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/tablet-style.css" media="(min-width: 768px)" />
+  <link rel="stylesheet" href="./css/desk-style.css" media="(min-width: 1025px)" />
+  <title>AREAL AUTO</title>
 </head>
+
 <body>
-    <script src="./libs/jquery.min.js"></script>
-    <script src="./libs/masked-input.min.js"></script>
-    <script src="./libs/fancybox.min.js"></script>
-    <script src="./libs/select2.js"></script>
-    <script src="./js/main.js"></script>
+  <header class="header">
+    <div class="container">
+      <div class="header__top">
+        <span class="header__top-text">33 км МКАД 6 стр 6</span>
+        <a href="tel:+7 (495) 111 11-11" class="header__top-text">+7 (495) 111 11-11</a>
+      </div>
+      <div class="header__container">
+        <div class="header__logo">
+          <img src="./img/logo.svg" alt="logo" class="header__logo-img">
+        </div>
+        <div class="header__menu">
+          <nav class="header__nav">
+            <a href="#shop" class="header__nav-link">Купить <span class="upper_text">HAVAL JOLION</span></a>
+            <a href="#equip" class="header__nav-link">Выбор комплектации</a>
+            <a href="#credit" class="header__nav-link">Кредитное предложение</a>
+            <a href="#trade-in" class="header__nav-link">Программа Trade-In</a>
+            <a href="#contact" class="header__nav-link">Контакты</a>
+          </nav>
+          <div class="header__info">
+            <div class="header__menu-line"></div>
+            <div class="header__menu-info">
+              <a href="tel:+7 (495) 111 11-11" class="header__menu-link">+7 (495) 111 11-11</a>
+              <span class="header__info-text">Ежедневно с 8:00 до 21:00</span>
+              <span class="header__info-text">33 км МКАД 6 стр 6</span>
+            </div>
+            <button class="btn bg_blue header__button">Обратный звонок</button>
+          </div>
+        </div>
+        <div class="burger">
+          <span class="burger__line _line_1"></span>
+          <span class="burger__line _line_2"></span>
+          <span class="burger__line _line_3"></span>
+        </div>
+      </div>
+    </div>
+  </header>
+  <script src="./libs/jquery.min.js"></script>
+  <script src="./libs/masked-input.min.js"></script>
+  <script src="./libs/fancybox.min.js"></script>
+  <script src="./libs/select2.js"></script>
+  <script src="./js/main.js"></script>
 </body>
+
 </html>
