--- a/index.html
+++ b/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/reset-style.css" />
-    <link rel="stylesheet" href="./css/swiper.min.css" />
-    <link rel="stylesheet" href="./css/fancybox.min.css" />
-    <link rel="stylesheet" href="./css/sumoselect2.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link
-      rel="stylesheet"
-      href="./css/tablet-style.css"
-      media="(min-width: 768px)"
-    />
-    <link
-      rel="stylesheet"
-      href="./css/desk-style.css"
-      media="(min-width: 1025px)"
-    />
-    <title>KIA</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/reset-style.css" />
+  <link rel="stylesheet" href="./css/swiper.min.css" />
+  <link rel="stylesheet" href="./css/fancybox.min.css" />
+  <link rel="stylesheet" href="./css/sumoselect2.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/tablet-style.css" media="(min-width: 768px)" />
+  <link rel="stylesheet" href="./css/desk-style.css" media="(min-width: 1025px)" />
+  <title>KIA</title>
 </head>
+
 <body>
   <header class="header">
     <div class="container">
@@ -51,7 +45,7 @@
             <img src="./img/header-phone.svg" alt="icon-phone" class="header-info__text-icon">
             <span>+7 (999) 999-99-99</span>
           </a>
-          <button class="header-button btn mob_hide">
+          <button class="header-button btn mob_hide _border _inversion">
             Обратный звонок
           </button>
         </div>
@@ -63,10 +57,36 @@
       </div>
     </div>
   </header>
-    <script src="./libs/jquery.min.js"></script>
-    <script src="./libs/masked-input.min.js"></script>
-    <script src="./libs/fancybox.min.js"></script>
-    <script src="./libs/select2.js"></script>
-    <script src="./js/main.js"></script>
+  <section class="main-banner">
+    <div class="swiper swiper-main-banner">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <div class="container">
+            <h1 class="main-banner__title">
+              Финальная распродажа KIA в кредит! Скидки до 40% на все модели!
+            </h1>
+            <ul class="main-banner__list">
+              <li class="main-banner__list-item">Ставка 4,9%</li>
+              <li class="main-banner__list-item">Первый взнос 0%</li>
+              <li class="main-banner__list-item">
+                3 платежа<br>в подарок
+              </li>
+              <li class="main-banner__list-item">
+                Скидка 70 000 ₽<br>при покупке в кредит
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-pagination"></div>
+    </div>
+  </section>
+  <script src="./libs/jquery.min.js"></script>
+  <script src="./libs/masked-input.min.js"></script>
+  <script src="./libs/fancybox.min.js"></script>
+  <script src="./libs/select2.js"></script>
+  <script src="./libs/swiper-bundle.min.js"></script>
+  <script src="./js/main.js"></script>
 </body>
+
 </html>
